--- a/static/smoke/style.css
+++ b/static/smoke/style.css
@@ -1,12 +1,16 @@
 * {
-	box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 body {
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
-div.pad50px {
-	padding: 50px;
+div.card {
+    padding: 25px;
+    font-size: 200%;
+    border: darkcyan;
+    border-style: solid;
+    border-width: 1px;
 }
